--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -2,10 +2,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.example.ctrain.MainActivity" >
 
+	<item
+        android:id="@+id/menu_refresh"
+        android:checkable="false"
+        android:orderInCategory="1"
+        android:title=""
+        android:showAsAction="ifRoom"/>
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/menu_scan"
         android:orderInCategory="100"
-        android:showAsAction="never"
-        android:title="@string/action_settings"/>
+        android:showAsAction="ifRoom|withText"
+        android:title="@string/menu_scan"/>
+    <item
+        android:id="@+id/menu_stop"
+        android:orderInCategory="101"
+        android:showAsAction="ifRoom|withText"
+        android:title="@string/menu_stop"/>
 
 </menu>
