--- a/res/layout/fragment_tab1.xml
+++ b/res/layout/fragment_tab1.xml
@@ -1,16 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    android:orientation="vertical" >
 
     <TextView
         android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="45dp"
-        android:layout_marginTop="30dp"
         android:text="tab1" />
 
-</RelativeLayout>
+    <TextView
+        android:id="@+id/latitude_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="latitude" />
+
+    <TextView
+        android:id="@+id/longitude_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="longitude" />
+
+</LinearLayout>
