--- a/res/layout/fragment_tab1.xml
+++ b/res/layout/fragment_tab1.xml
@@ -22,4 +22,10 @@
         android:layout_height="wrap_content"
         android:text="longitude" />
 
+    <TextView
+        android:id="@+id/route"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TextView" />
+
 </LinearLayout>
