--- a/res/layout/fragment_tab1.xml
+++ b/res/layout/fragment_tab1.xml
@@ -4,28 +4,84 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-    <TextView
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+        <TextView
+        android:id="@+id/terminal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/terminal" />
+        <TextView
         android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="tab1" />
+        android:text="@string/initial" />
+    </LinearLayout>
+    
+	<LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+	    <TextView
+	        android:id="@+id/latitude"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:text="@string/latitude" />
+	    <TextView
+	        android:id="@+id/latitude_view"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:text="@string/initial" />
+	</LinearLayout>
+	    
+	<LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+	    <TextView
+	        android:id="@+id/longitude"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:text="@string/longitude" />
+	    <TextView
+	        android:id="@+id/longitude_view"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:text="@string/initial" />
+    </LinearLayout>
 
-    <TextView
-        android:id="@+id/latitude_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="latitude" />
+	<LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+	    <TextView
+	        android:id="@+id/line"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:text="@string/line" />
+	    <TextView
+	        android:id="@+id/route"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:text="@string/initial" />
+	</LinearLayout>
 
-    <TextView
-        android:id="@+id/longitude_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="longitude" />
-
-    <TextView
-        android:id="@+id/route"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="TextView" />
+	<LinearLayout
+	    android:layout_width="match_parent"
+	    android:layout_height="match_parent"
+	    android:orientation="horizontal"
+	    android:gravity="center" >
+		
+		<ImageView
+		    android:id="@+id/crowd"
+		    android:layout_width="wrap_content"
+		    android:layout_height="wrap_content"
+		    android:contentDescription="@string/crowdrate"
+		    android:src="@drawable/level0" />
+		<ImageView
+		    android:id="@+id/lineimage"
+		    android:layout_width="wrap_content"
+		    android:layout_height="wrap_content"
+		    android:layout_margin="10pt"
+		    android:contentDescription="@string/lineimage" />    
+	</LinearLayout>
 
 </LinearLayout>
