--- a/res/layout/list_item.xml
+++ b/res/layout/list_item.xml
@@ -8,7 +8,7 @@
         android:id="@+id/icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_launcher"
+        android:src="@drawable/y_icon"
         android:contentDescription="@string/icon" />
 
     <TextView
